--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<title>how to get free candy</title>
+<title>free candy website</title>
+<h2>How to get free candy</h2>
+<h4> a complete guide for avid candy enjoyers</h4>
+<nav style="color:rgb(255, 0, 0)"><a href="https://www.youtube.com/@DoaenelYT"><b>YouTube</b></a></nav>
+<nav><a href="https://en.uncyclopedia.co/wiki/HowTo:Cook_Children"><b>Other Tutorials</b></a></b></a></nav>
+<ol>
+    <li><b>find a nice white van (any should work)</b></li>
+    <li><b>you have to make shure that the man inside asks if you want the candy first</b></li>
+    <li><b>if he invites you to his van, go on ahead and climb in his van</b> </li>
+</ol>
+<p>That is all it takes to get free candy. Hope you enjoy and be sure to subscribe to my youtube channel for more helpful tips!</p>
+<img src="https://i.ytimg.com/vi/WXiIBhGmJeM/maxresdefault.jpg" alt="Free candy" width="500" height="175">
+<footer> copyright by a very cool person in the year of 2024</footer>
